my-first-chart/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m1tttt4-nginx-internal-ingress
spec:
  ingressClassName: internal-nginx
  rules:
  - host: m1tttt4-nginx-internal-ingress
    http: 
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          serviceName: m1tttt4-nginx-internal-ingress
          servicePort: http
  tls:
  - hosts:
    - m1tttt4-nginx-internal-ingress
    secretName: m1tttt4-nginx-internal-ingress-tls
